// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag overview 0 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(255,0,0,0.15);
  border: 2px solid red;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<span
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      some text
    </span>
  </span>
</DocumentFragment>
`;

exports[`Tag overview 1 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(255,0,0,0.15);
  border: 2px solid red;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<span
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      some text
    </span>
  </span>
</DocumentFragment>
`;

exports[`Tag overview 2 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(255,0,0,0.15);
  border: 2px solid red;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<span
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      some text
    </span>
  </span>
</DocumentFragment>
`;

exports[`Tag overview 3 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(255,0,0,0.15);
  border: 2px solid red;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<span
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      some text
    </span>
  </span>
</DocumentFragment>
`;

exports[`Tag overview 4 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(255,0,0,0.15);
  border: 2px solid red;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<span
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      some text
    </span>
  </span>
</DocumentFragment>
`;

exports[`Tag overview snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(255,0,0,0.15);
  border: 2px solid red;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<span
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      some text
    </span>
  </span>
</DocumentFragment>
`;

exports[`Tag twilwindArrayColors snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(255,255,255,0.15);
  border: 2px solid white;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<span
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      some text
    </span>
  </span>
</DocumentFragment>
`;
